added header footer

--- a/index.html
+++ b/index.html
@@ -11,22 +11,43 @@
 
   <body>
     <header>
-      <h1>Hello</h1> 
-
-      
+      <h1>Kazuya Miyata's Portfolio</h1> 
     </header>
 
     <a href="media/Kazuya_Miyata_Resume_6.pdf">Resume</a>
 
     <nav>
       <ul>
-        <li><a href="aboutme.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="pages/aboutme.html">About</a></li>
+        <li><a href="pages/projects.html">Projects</a></li>
+        <li><a href="pages/contact.html">Contact</a></li>
       </ul>
     </nav>
-    <footer>    
 
+
+    <footer>    
+      <hr>
+      <h3>My Links:</h3>
+      <nav>
+        <ul>
+
+         <li>
+           <a href="https://www.linkedin.com/in/kazmiyata/">
+            <img src="/media/icons8-linkedin.svg" alt="Linkedin" width="40" height="40">
+           </a>
+          </li>
+          <li>
+            <a href="https://github.com/miyatakazuya">
+             <img src="/media/icons8-github.svg" alt="Github" width="40" height="40">
+            </a>
+          </li>
+          <li>
+            <a href="mailto:kazuyamiyata18@gmail.com">
+             <img src="/media/Minduka-mail.svg" alt="Linkedin" width="40" height="40">
+            </a>
+          </li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
