--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -44,8 +44,29 @@
     </section>
     
 
-    <footer>
+    <footer>   
+      <hr> 
+      <h3>My Links:</h3>
+      <nav>
+        <ul>
 
+         <li>
+           <a href="https://www.linkedin.com/in/kazmiyata/">
+            <img src="../media/icons8-linkedin.svg" alt="Linkedin" width="40" height="40">
+           </a>
+          </li>
+          <li>
+            <a href="https://github.com/miyatakazuya">
+             <img src="../media/icons8-github.svg" alt="Github" width="40" height="40">
+            </a>
+          </li>
+          <li>
+            <a href="mailto:kazuyamiyata18@gmail.com">
+             <img src="../media/Minduka-mail.svg" alt="Linkedin" width="40" height="40">
+            </a>
+          </li>
+        </ul>
+      </nav>
     </footer>
     
   </body>
