--- a/pages/projects.html
+++ b/pages/projects.html
@@ -22,6 +22,8 @@
       </nav>
     </header>
 
+    <hr>
+
     <section>
       <h2>Project 1: </h2>
       
@@ -35,5 +37,29 @@
       </aside>
     </section>
     
+    <footer>  
+      <hr>  
+      <h3>My Links:</h3>
+      <nav>
+        <ul>
+
+         <li>
+           <a href="https://www.linkedin.com/in/kazmiyata/">
+            <img src="../media/icons8-linkedin.svg" alt="Linkedin" width="40" height="40">
+           </a>
+          </li>
+          <li>
+            <a href="https://github.com/miyatakazuya">
+             <img src="../media/icons8-github.svg" alt="Github" width="40" height="40">
+            </a>
+          </li>
+          <li>
+            <a href="mailto:kazuyamiyata18@gmail.com">
+             <img src="../media/Minduka-mail.svg" alt="Linkedin" width="40" height="40">
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
