--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kazuya's Website</title>
     <style>
-        
+        header {
+            border : 2px black;
+            border-radius: 8px;
+        }
+
     </style>
   </head>
 
   <body>
     <header>
+      <link rel="icon" href="favicon.ico"/>
       <h1>Kazuya Miyata's Portfolio</h1> 
     </header>
 
@@ -21,6 +26,7 @@
         <li><a href="pages/aboutme.html">About</a></li>
         <li><a href="pages/projects.html">Projects</a></li>
         <li><a href="pages/contact.html">Contact</a></li>
+        <li><a href="pages/experimenal.html">Experimental</a></li>
       </ul>
     </nav>
 
