--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,30 +18,60 @@
           <li><a href="aboutme.html">About</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="experimenal.html">Experimental</a></li>
         </ul>
       </nav>
     </header>
+    <hr>
+    <h3>My Contact Information</h3>
+    <address>
+      <a href="mailto:kazuyamiyata18@gmail.com">kazuyamiyata18@gmail.com</a><br />
+      <a href="tel:+16509424999">+1 (650) 942-4999</a>
+    </address>
 
     <hr>
 
+    <h3>Contact Form:</h3>
     <p>Please enter your information here<br>Use the <kbd>method</kbd> to specify perferred form of contact.</p>
 
     <form action="/submit" method="post">
-      <div>
-        <label for="method">What is your preferred method of contact?</label><br />
-        <select id="method" name="method" required>
-          <optgroup label="Email">
-            <option value="asap">ASAP</option>
-            <option value="couple-days">Within a couple days</option>
-            <option value="Whenever">Whenever</option>
-          </optgroup>
-          <optgroup label="Phone">
-            <option value="asap">ASAP</option>
-            <option value="couple-days">Within a couple days</option>
-            <option value="Whenever">Whenever</option>
-          </optgroup>
-        </select>
-      </div>
+
+      <fieldset>
+        <legend>Contact Information</legend>
+        <p>Preferred Language</p>
+        <input type="text" name="language" id="language" />
+        <datalist id="language">
+          <option value="en">English</option>
+          <option value="jpn">Japanese</option>
+        </datalist>
+      </fieldset>
+
+      <fieldset>
+        <legend>Details</legend>
+        <div>
+          <label for="method">What is your preferred method of contact?</label><br />
+          <select id="method" name="method" required>
+            <optgroup label="Email">
+              <option value="asap">ASAP</option>
+              <option value="couple-days">Within a couple days</option>
+              <option value="Whenever">Whenever</option>
+            </optgroup>
+            <optgroup label="Phone">
+              <option value="asap">ASAP</option>
+              <option value="couple-days">Within a couple days</option>
+              <option value="Whenever">Whenever</option>
+            </optgroup>
+          </select>
+        </div>
+        <div>
+          <label for="reason">Reason for contact</label><br/>
+          <textarea id="reason" name="reason" required></textarea>
+        </div>
+        <div>
+          <button type="submit">Submit</button>
+        </div>
+      </fieldset>
+      
     </form>
     
     <footer>  
