--- a/pages/projects.html
+++ b/pages/projects.html
@@ -32,20 +32,20 @@
     </header>
 
     <hr>
-
+    
     <section>
-      <h2>Project 1: </h2>
-      <noscript>
+      <h2>Project 1: TritonUAS</h2>
+      
       <figure>
-        <img src="../media/icons8-github.svg" alt="p1_pic">
-        <figcaption>My project at work</figcaption>
+        <img src="../media/IMG_6365.jpg" alt="p1_pic" height="400" width="400">
+        <figcaption>The Triton UAS Plane - Nickname "Stickbug"</figcaption>
       </figure>
 
       <video controls>
         <source src="../media/IMG_6367_compressed.mp4" type="video/mp4" />
       </video>
 
-      </noscript>
+
       <p>
         Lorem inpusum Proj description
       </p>
