--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -32,12 +32,12 @@
       </hgroup>
       
       <picture>
-        <source srcset="../images/kaz_portrait_updated.jpg"media="(min-width: 800px)" type="image/jpg"  />
+        <source srcset="../images/kaz_portrait_updated.jpg" media="(min-width: 800px)" type="image/jpg">
         <img
           src="../images/kaz_portrait_updated.jpg"
-          width="200px"
+          width="200"
           alt="Kazuya Miyata Portrait"
-        />
+        >
       </picture>
 
 
