--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <style>
         
@@ -25,7 +25,7 @@
     <hr>
     <h3>My Contact Information</h3>
     <address>
-      <a href="mailto:kazuyamiyata18@gmail.com">kazuyamiyata18@gmail.com</a><br />
+      <a href="mailto:kazuyamiyata18@gmail.com">kazuyamiyata18@gmail.com</a><br>
       <a href="tel:+16509424999">+1 (650) 942-4999</a>
     </address>
 
@@ -39,8 +39,8 @@
       <fieldset>
         <legend>Contact Information</legend>
         <p>Preferred Language</p>
-        <input type="text" name="language" id="language" />
-        <datalist id="language">
+        <input type="text" name="language" id="language">
+        <datalist id="lang">
           <option value="en">English</option>
           <option value="jpn">Japanese</option>
         </datalist>
@@ -49,8 +49,8 @@
       <fieldset>
         <legend>Details</legend>
         <div>
-          <label for="method">What is your preferred method of contact?</label><br />
-          <select id="method" name="method" required>
+          <label for="method">What is your preferred method of contact?</label><br>
+          <select id="method" name="method" >
             <optgroup label="Email">
               <option value="asap">ASAP</option>
               <option value="couple-days">Within a couple days</option>
@@ -64,8 +64,8 @@
           </select>
         </div>
         <div>
-          <label for="reason">Reason for contact</label><br/>
-          <textarea id="reason" name="reason" required></textarea>
+          <label for="reason">Reason for contact</label><br>
+          <textarea id="reason" name="reason" ></textarea>
         </div>
         <div>
           <button type="submit">Submit</button>
