--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Projects</title>
     <style>
       my-project {
@@ -42,7 +42,7 @@
       </figure>
 
       <video controls>
-        <source src="../media/IMG_6367_compressed.mp4" type="video/mp4" />
+        <source src="../media/IMG_6367_compressed.mp4" type="video/mp4">
       </video>
 
 
@@ -60,7 +60,7 @@
           <cite><a href="http://www.movable-type.co.uk/scripts/latlong.html">the 'haversine' formula.</a></cite>
         </blockquote>
 
-        <p>A <def>Pipeline</def> is a program that takes in un-processed images and outputs details based off the features in the image.</p>
+        <p>A <dfn>Pipeline</dfn> is a program that takes in un-processed images and outputs details based off the features in the image.</p>
 
         Some Acronyms:  
         <dl>
@@ -73,9 +73,9 @@
         </dl>
       </details>
 
+      Skills used:
       <aside>
         <ol>
-          Skills used:
           <li> C++</li>
           <li> Cmake</li>
           <li> Pytorch</li>
