--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kazuya Miyata's Portfolio">
+    <meta name="keywords" content="autonomous robotics, computer science">
+    <meta name="author" content="Kazuya Miyata">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kazuya's Website</title>
     <style>
         header {
