--- a/pages/experimenal.html
+++ b/pages/experimenal.html
@@ -130,6 +130,20 @@
           </template>
     </section>
 
+    <!-- My Einstein formula -->
+     <!-- The reason they were not very commonly used is likely because most mainstream browsers did not support the feature till 2020s-->
+    <math xmlns="http://www.w3.org/1998/Math/MathML">
+        <mrow>
+            <mi>E</mi>
+            <mo>=</mo>
+            <mi>m</mi>
+            <mo>&InvisibleTimes;</mo>
+            <msup>
+                <mi>c</mi>
+                <mn>2</mn>
+            </msup>
+        </mrow>
+    </math>
 
     <hello-world></hello-world>
 
